<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.onurerten.maths5.Main6Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gradient_symbol"
        android:textSize="60sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_gradient"
        android:textSize="20sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meaning_vector_of_partial_derivatives"
        android:textSize="19sp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_in_mathematics_vector_calculus"
        android:textSize="19sp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_f_x_y_z_3xy_z_f_3y_3x_2z"
        android:textSize="19sp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />


</RelativeLayout>
